--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 ﻿{
   "profiles": {
-    "NotesAppBackend": {
+    "NotesBE": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7065;http://localhost:5000",
       "environmentVariables": {
