--- a/package.json
+++ b/package.json
@@ -26,23 +26,29 @@
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.10.7",
     "@types/vue": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.21.0",
+    "@typescript-eslint/parser": "^8.21.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-prettier": "^10.1.0",
-    "@vue/eslint-config-typescript": "^14.1.3",
+    "@vue/eslint-config-typescript": "^14.3.0",
     "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.20",
     "cypress": "^13.17.0",
-    "eslint": "^9.14.0",
+    "eslint": "^9.18.0",
+    "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-cypress": "^4.1.0",
-    "eslint-plugin-vue": "^9.30.0",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-vue": "^9.32.0",
+    "globals": "^15.14.0",
     "npm-run-all2": "^7.0.2",
     "postcss": "^8.5.1",
     "prettier": "^3.3.3",
     "start-server-and-test": "^2.0.9",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3",
-    "vite": "^6.0.5",
+    "vite": "^6.0.11",
     "vite-plugin-vue-devtools": "^7.6.8",
+    "vue-eslint-parser": "^9.4.3",
     "vue-tsc": "^2.1.10"
   }
 }
